--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -27,9 +27,8 @@
 
 
 \title{Annotation File Specification}
-\author{JSR 308 Team \\
-  MIT Computer Science and Artificial Intelligence Lab \\
-  jsr308@csail.mit.edu
+\author{Annotation File Utilities Team \\
+  \url{http://code.google.com/p/annotation-tools/}
 }
 
 \begin{document}
