Clarify that formal parameters are numbered starting at #0.

--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -477,7 +477,7 @@ and the type of a method parameter.
 \begin{tabbing}
 \qquad \= \kill
 \bnfnt{parameter-definition} ::= \\
-\qquad    \bnfcmt The integer is the index of the formal parameter in the method. \\
+\qquad    \bnfcmt The integer is the zero-based index of the formal parameter in the method. \\
 \qquad    \bnflit{parameter} \bnfnt{integer} \bnflit{:} \bnfnt{decl-annotation}* \lineend \\
 \qquad    \bnfnt{type-annotations}*
 \end{tabbing}
