Adds note about using "implements" rather than "extends" for interface declarations.

--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -329,6 +329,9 @@ public class Class<K extends Number> {
 The \bnfnt{extends} and \bnfnt{implements} productions
 define annotations on the names of classes a class \code{extends} or
 \code{implements}.
+(Note: For interface declarations, \bnfnt{implements} rather than
+\bnfnt{extends} defines annotations on the names of extended
+interfaces.)
 
 \begin{tabbing}
 \qquad \= \kill
