Removes type-annotation* from grammar production for reference.

--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -660,7 +660,7 @@ The grammar uses \bnflit{\#} for bytecode offsets and \bnflit{*} for source code
 \qquad    \bnfor{} (\bnflit{*} \bnfnt{integer}) \\
 \\
 \bnfnt{reference} ::= \\
-\qquad    \bnflit{reference} \bnfnt{reference-location} \bnflit{:} \bnfnt{type-annotation}* \lineend \\
+\qquad    \bnflit{reference} \bnfnt{reference-location} \bnflit{:} \lineend \\
 \qquad        \bnfnt{typearg-definition}* \\
 \qquad        \bnfnt{typearg-bound}* \\
 %\qquad        \bnfnt{return-type}? \\
