--- a/annotation-file-utilities/design.tex
+++ b/annotation-file-utilities/design.tex
@@ -14,8 +14,9 @@
 
 The Annotation File Utilities (AFU) include programs for extracting
 annotations from Java class files and inserting annotations into Java
-source or class files, in accordance with the JSR 308 standard. In this
-document, I use AFU in the singular, in reference to the source
+source or class files, in accordance with the Java 8 language and virtual
+machine specification.  This
+document uses AFU in the singular, in reference to the source
 insertion program except where otherwise noted.
 
 The AFU suffers from multiple design flaws that impede performance and
