Update references from Google Code to GitHub and from Mercurial (Hg) to Git

--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -1050,7 +1050,7 @@ annotation definition in an annotation file will often mirror an
 \code{@interface} annotation declaration in a Java source file in order to use
 that annotation in an annotation file.
 
-% TODO, see https://code.google.com/p/annotation-tools/issues/detail?id=25
+% TODO, see https://github.com/typetools/annotation-tools/issues/25
 % The Annotation File Utilities can read annotation definitions from the
 % classpath, so it is optional to define them in the annotation file.
 
