"parameter" => "formal parameter" in explanatory text

--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -478,8 +478,9 @@ is represented as a return type.
 
 \paragraph{Parameter definition}
 
-A parameter definition defines the annotations on a method parameter declaration
-and the type of a method parameter.
+A formal parameter definition defines the annotations on a method formal
+parameter declaration and the type of a method formal parameter, but
+\emph{not} the receiver formal parameter.
 
 \begin{tabbing}
 \qquad \= \kill
