--- a/annotation-file-utilities/design.tex
+++ b/annotation-file-utilities/design.tex
@@ -53,8 +53,9 @@ preserving formatting and commentary by incorporating non-leaf text
 
 \section{Current AFU}
 
-The current AFU source code (3.6.25 as of 1 Feb 2015) is organized
-into four packages (not counting the \texttt{scene\_lib} sub-project):
+The current AFU source code (3.6.16 as of 11 June 2015) is organized
+into four packages (not counting the \texttt{asmx} and
+\texttt{scene\_lib} sub-projects):
 \begin{itemize}
 \item  \texttt{annotator}, containing the main class and a class
 representing source text;
