--- a/annotation-file-utilities/tests/ad-hoc/bridge/README
+++ b/annotation-file-utilities/tests/ad-hoc/bridge/README
@@ -1,6 +1,5 @@
 Test of bridge method inclusion/exclusion.  For the default target
-(created with "make all"), the extracted JAIF should contain a method
-entry for "compareTo(LC;)I" but no entry for
-"compareTo(Ljava/lang/Object;)I"; for the alternate target ("make alt"),
-the JAIF should contain both.
+(created with "make all"), the extracted JAIF should contain entries for
+both "compareTo(LC;)I" and "compareTo(Ljava/lang/Object;)I"; for the
+alternate target ("make alt"), the JAIF should omit the latter.
 
