--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -39,7 +39,7 @@
 
 \title{Annotation File Format Specification}
 % Hevea ignores \date, so move the date into \author
-\author{\url{http://checker-framework.com/annotation-file-utilities/} \\
+\author{\url{https://checkerframework.org/annotation-file-utilities/} \\
 \today}
 \date{}
 
@@ -97,7 +97,7 @@ modify.
 An ``annotation file'' serves this purpose by specifying a set of
 Java annotations.
 The Annotation File Utilities
-(\url{http://checker-framework.com/annotation-file-utilities/}) are a set
+(\url{https://checkerframework.org/annotation-file-utilities/}) are a set
 of tools that process annotation files.
 
 The file format discussed in this document supports both standard Java SE 5
