--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -1170,7 +1170,7 @@ The type argument index used in the \bnfnt{type-path} rule must be \bnflit{0} un
 \bnflit{3}. In this case, the type argument index selects which type argument
 of a parameterized type to use.
 
-\urldef\cftp\url|http://types.cs.washington.edu/jsr308/specification/java-annotation-design.html#class-file:ext:type_path|
+\urldef\cftp\url|https://checkerframework.org/jsr308/specification/java-annotation-design.html#class-file:ext:type_path|
 Type paths are explained in more detail, with many examples to ease
 understanding, in Section 3.4 of the JSR 308 Specification.\footnotemark
 \footnotetext{\cftp}
