--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -1444,7 +1444,7 @@ files.
 
 
 \bibliographystyle{alpha}
-\bibliography{annotation-file-format,bibstring-unabbrev,types,ernst,invariants,generals,alias}
+\bibliography{annotation-file-format,bibstring-unabbrev,types,ernst,invariants,generals,alias,crossrefs}
 
 \end{document}
 
