Spell-check, and update package name for OptionsDoclet

--- a/annotation-file-utilities/annotation-file-format.tex
+++ b/annotation-file-utilities/annotation-file-format.tex
@@ -1454,7 +1454,7 @@ files.
 %  LocalWords:  filenames typeparam javap init clinit ast un lowercased io
 %  LocalWords:  ExpressionStatement AnnotatedType underlyingType ArrayType
 %  LocalWords:  ArrayAccess leftOperand rightOperand CompoundAssignment
-%  LocalWords:  ConditionalExpression trueExpression falseExpression
+%  LocalWords:  ConditionalExpression trueExpression falseExpression i'th
 %  LocalWords:  DoWhileLoop EnhancedForLoop ForLoop thenStatement NewArray
 %  LocalWords:  elseStatement InstanceOf LabeledStatement LambdaExpression
 %  LocalWords:  MemberReference qualifierExpression typeArgument NewClass
@@ -1464,4 +1464,6 @@ files.
 %  LocalWords:  AClass AMethod AElement objectweb anno tations parseScene
 %  LocalWords:  CriterionList isSatisifiedBy CriteriaList afu getPositions
 %  LocalWords:  InPackageCriterion InClassCriterion InMethodCriterion
-%  LocalWords:  ParamCriterion inserter RUNNABLE ASM src asm
+%  LocalWords:  ParamCriterion inserter RUNNABLE ASM src asm staticinit
+%%  LocalWords:  instanceinit typearg IntersectionType TypeParameter
+%%  LocalWords:  classfile crossrefs
