--- a/annotation-file-utilities/design.tex
+++ b/annotation-file-utilities/design.tex
@@ -462,3 +462,13 @@ public abstract class JCTree implements Tree {
 
 \end{document}
 
+
+%%  LocalWords:  AFU asmx JAIF IndexFileSpecification TreeFinder boolean
+%%  LocalWords:  isSatisfiedBy TreePath AScene AAST JCTree javac's subtree
+%%  LocalWords:  AFU's AClass AMethod subgraph TypeCast prettyPrint anno
+%%  LocalWords:  insertAnnotation insertAnnotations aast BinaryTree opcode
+%%  LocalWords:  LiteralTree getKind TreeVisitor ExpressionTree getValue
+%%  LocalWords:  getLeftOperand getRightOperand getStartPosition TreeInfo
+%%  LocalWords:  getStartPos JCExpression JCBinary lhs rhs tagToKind ci
+%%  LocalWords:  getTag getOperator visitBinary JCLiteral TypeTag typetag
+%%  LocalWords:  getKindLiteral AssertionError visitLiteral
