--- a/annotation-file-utilities/annotation-file-format.bib
+++ b/annotation-file-utilities/annotation-file-format.bib
@@ -1,7 +1,7 @@
 @Misc{ASM,
   key = "ASM website",
   title =    "{ASM} website",
-  howpublished = "\url{http://asm.ow2.org/}",
+  howpublished = "\url{https://asm.ow2.org/}",
 }
 
 @Misc{CF,
