--- a/annotation-file-utilities/lib/README
+++ b/annotation-file-utilities/lib/README
@@ -6,3 +6,6 @@ options: https://repo.maven.apache.org/maven2/org/plumelib/options/
 
 plume-util: https://repo.maven.apache.org/maven2/org/plumelib/plume-util/
   wget https://repo.maven.apache.org/maven2/org/plumelib/plume-util/1.0.0/plume-util-1.0.0.jar
+
+checker-qual: https://repo.maven.apache.org/maven2/org/checkerframework/checker-qual/
+  wget https://repo.maven.apache.org/maven2/org/checkerframework/checker-qual/2.5.4/checker-qual-2.5.4.jar
